name:                dbmigrations-client
version:             0.1
synopsis:            An interactive terminal client for dbmigrations
license:             BSD3
license-file:        LICENSE
author:              Jonathan Daugherty <cygnus@foobox.com>
maintainer:          Jonathan Daugherty <cygnus@foobox.com>
copyright:           (c) 2015 Jonathan Daugherty
category:            Database
build-type:          Simple
cabal-version:       >=1.10

executable dbmigrations-client
  main-is:             Main.hs
  other-modules:
    Types
    UI
    Events
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  build-depends:       base,
                       brick,
                       dbmigrations,
                       lens,
                       vty,
                       configurator,
                       mtl,
                       text-zipper,
                       unix,
                       process
